<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.RegistrationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/authCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="20dp"
                app:cardElevation="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_activation_with_sms"
                        android:textAlignment="center"
                        android:textColor="#4D5004"
                        android:textSize="18sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/write_name"
                        android:textColorHighlight="#4D5004"
                        android:textColorLink="#4D5004">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nameField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHighlight="#4D5004" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layerType="software"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                            <Spinner
                                android:id="@+id/spinner"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1" />
                        </androidx.cardview.widget.CardView>

                        <com.github.pinball83.maskededittext.MaskedEditText
                            android:id="@+id/masked_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:inputType="number"
                            android:textColor="#4D5004"
                            android:visibility="visible"
                            app:mask="(***) ***-**-**"
                            app:notMaskedSymbol="*" />

                        <com.github.pinball83.maskededittext.MaskedEditText
                            android:id="@+id/masked_edit_text2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:inputType="number"
                            android:textColor="#4D5004"
                            android:visibility="gone"
                            app:mask="** *** ****"
                            app:notMaskedSymbol="*" />

                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp"
                        android:alpha="100"
                        android:background="@drawable/button"
                        android:backgroundTintMode="add"
                        android:text="Получить смс"
                        android:textColor="#4D5004"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:cornerRadius="16dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/smsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="20dp"
                app:cardElevation="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/titleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/send_code"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/wrongNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wrong_number"
                        android:textAlignment="center"
                        android:textColor="@color/btnText"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/code_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number"
                        android:maxLength="5"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/repeatSms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/repeat_send_sms"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/nextId"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="16dp"
                        android:alpha="100"
                        android:background="@drawable/button"
                        android:backgroundTintMode="add"
                        android:text="@string/next"
                        android:textColor="#4D5004"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:cornerRadius="16dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/loader"
        layout="@layout/loader"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:keepScreenOn="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
