<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/title" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/title"
        android:textColor="@color/titleColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <FrameLayout
        android:id="@+id/frame_bar"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/sprite_background"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:clipToPadding="true"
            android:filterTouchesWhenObscured="true"
            android:fitsSystemWindows="true"
            android:foregroundTintMode="screen"
            android:gravity="center"
            android:layerType="hardware"
            android:layoutDirection="inherit"
            android:layoutMode="clipBounds"
            android:orientation="horizontal">

            <com.abdulahad.bookravulk.imageview_scrolling.ImageViewScrolling
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">

            </com.abdulahad.bookravulk.imageview_scrolling.ImageViewScrolling>

            <com.abdulahad.bookravulk.imageview_scrolling.ImageViewScrolling
                android:id="@+id/image2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">

            </com.abdulahad.bookravulk.imageview_scrolling.ImageViewScrolling>

            <com.abdulahad.bookravulk.imageview_scrolling.ImageViewScrolling
                android:id="@+id/image3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center">

            </com.abdulahad.bookravulk.imageview_scrolling.ImageViewScrolling>

        </LinearLayout>

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/touchBtn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:fontFamily="sans-serif"
        android:text="@string/touch"
        android:textColor="#4D5004"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_bar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pointsBtn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:background="@drawable/button"
        android:backgroundTintMode="add"
        android:fontFamily="sans-serif"
        android:text="@string/point"
        android:textColor="#8A8A03"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/touchBtn" />

    <TextView
        android:id="@+id/balance_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:padding="16dp"
        android:textColor="#C2C00D"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/frame_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/balance"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/balance_btn"
        app:layout_constraintEnd_toEndOf="@+id/balance_btn"
        app:layout_constraintStart_toStartOf="@+id/balance_btn"
        app:layout_constraintTop_toTopOf="@+id/balance_btn"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/settings_icon" />

    <ImageView
        android:id="@+id/question_btn"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settings_btn"
        app:layout_constraintTop_toTopOf="@+id/settings_btn"
        app:srcCompat="@drawable/question" />

    <include
        android:id="@+id/settings"
        layout="@layout/settings_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>